# tech-challenge2-g116

./: README.md  env.example  main.py  pyproject.toml  requirements.txt  ruff.toml
app/api/: auth_routes.py  user_routes.py
app/auth/: auth_service.py
app/core/: config.py  db.py
app/models/: models.py
app/services/: auth_service.py
app/utils/: auth_utils.py
templates/: dashboard.html  login.html  signup.html
